--- a/ios/podfile
+++ b/ios/podfile
@@ -1,4 +1,5 @@
 platform :ios, "5.0"
 pod 'BlocksKit'
+pod 'AFNetworking',  '~> 1.3.1'
 workspace 'IRKit.xcworkspace'
 xcodeproj 'SimpleRemote/SimpleRemote.xcodeproj'
