define custom scheme irkit-one://

--- a/ios/SimpleRemote/SimpleRemote/SimpleRemote-Info.plist
+++ b/ios/SimpleRemote/SimpleRemote/SimpleRemote-Info.plist
@@ -20,6 +20,21 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>None</string>
+			<key>CFBundleURLIconFile</key>
+			<string>icon</string>
+			<key>CFBundleURLName</key>
+			<string>com.kayac.irkit.one</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>irkit-one</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
