--- a/ios/podfile
+++ b/ios/podfile
@@ -2,4 +2,4 @@ platform :ios, "5.0"
 pod 'BlocksKit'
 pod 'AFNetworking',  '~> 1.3.1'
 workspace 'IRKit.xcworkspace'
-xcodeproj 'SimpleRemote/SimpleRemote.xcodeproj'
+xcodeproj 'One/One.xcodeproj'
