ir-state moved to device/

--- a/spec/diagrams/Makefile
+++ b/spec/diagrams/Makefile
@@ -1,12 +1,9 @@
 
-OUT = connect.png learn-ir-signal.png send-ir-signal.png ir-state.png one-create-icon.png
+OUT = connect.png learn-ir-signal.png send-ir-signal.png one-create-icon.png
 
 all: $(OUT)
 
-.SUFFIXES: .msc .png .gv
+.SUFFIXES: .msc .png
 
 .msc.png:
 	mscgen -T png -i $<
-
-.gv.png:
-	dot -Tpng $< -o $@
