--- a/podfile
+++ b/podfile
@@ -1,5 +1,6 @@
 platform :ios, "7.0"
 pod 'ISHTTPOperation', '~> 1.1.0'
+pod 'Reachability', '~> 3.1.1'
 workspace 'IRKit'
 xcodeproj 'Minimal/Minimal'
 link_with ['Minimal','IRKitViewSamples']
