--- a/IRKit/IRKitResources/IRKitResources-Info.plist
+++ b/IRKit/IRKitResources/IRKitResources-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.kayac.irkit.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>jp.maaash.irkit.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -41,6 +41,6 @@
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013年 KAYAC Inc. All rights reserved.</string>
+	<string>Copyright © 2013年 mash (Masakazu Ohtsuka). All rights reserved.</string>
 </dict>
 </plist>
