--- a/IRKit/IRKitViewSamples/IRKitViewSamples-Info.plist
+++ b/IRKit/IRKitViewSamples/IRKitViewSamples-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.kayac.irkit.viewsamples.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>jp.maaash.irkit.viewsamples.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
