--- a/podfile
+++ b/podfile
@@ -3,4 +3,4 @@ pod 'ISHTTPOperation', '~> 1.1.0'
 pod 'Reachability', '~> 3.1.1'
 workspace 'IRKit'
 xcodeproj 'Minimal/Minimal'
-link_with ['Minimal','IRKitViewSamples']
+link_with ['Minimal','IRKitViewSamples','IRKitTests']
