Tweak for recent cocoapods

--- a/podfile
+++ b/podfile
@@ -2,6 +2,11 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, "7.0"
 workspace 'IRKit'
 xcodeproj 'IRKit/IRKit.xcodeproj'
+pod 'ISHTTPOperation', '~> 1.1.0'
+
+target 'Minimal' do
+  xcodeproj 'Minimal/Minimal.xcodeproj'
+end
 
 pod 'ISHTTPOperation', '~> 1.1.0'
 
