--- a/podfile
+++ b/podfile
@@ -1,4 +1,6 @@
 source 'https://github.com/CocoaPods/Specs.git'
+use_frameworks!
+
 platform :ios, "7.0"
 workspace 'IRKit'
 xcodeproj 'IRKit/IRKit.xcodeproj'
