Follow recommendations from cocoapods

--- a/podfile
+++ b/podfile
@@ -3,23 +3,23 @@ use_frameworks!
 
 platform :ios, "7.0"
 workspace 'IRKit'
-xcodeproj 'IRKit/IRKit.xcodeproj'
+project 'IRKit/IRKit.xcodeproj'
 
 pod 'ISHTTPOperation', '~> 1.2.0'
 
 target 'Minimal' do
-  xcodeproj 'Minimal/Minimal.xcodeproj'
+  project 'Minimal/Minimal.xcodeproj'
 end
 
 target 'IRKit' do
-  xcodeproj 'IRKit/IRKit.xcodeproj'
+  project 'IRKit/IRKit.xcodeproj'
 end
 
 target 'IRKitViewSamples' do
-  xcodeproj 'IRKit/IRKit.xcodeproj'
+  project 'IRKit/IRKit.xcodeproj'
 end
 
 target 'IRKitTests' do
   pod 'OHHTTPStubs', '~> 3.0.4'
-  xcodeproj 'IRKit/IRKit.xcodeproj'
+  project 'IRKit/IRKit.xcodeproj'
 end
